--- a/A1.3/style.css
+++ b/A1.3/style.css
@@ -1,14 +1,50 @@
 body {
     background: url("bg.png");
+   
+}
+header{
+    height:50px;
+    max-width:800px;
+    margin:auto;
+ }
+#navi {
+    list-style-type: none;
+    position: fixed;
+    width:800px;
+    text-align: right;
+  
+}
+nav{
+    list-style-type: none;
+    width:800px;
+    text-align: center;
+}
+span{
+    color: grey;
+    font-size:30px;
+    margin: 0px 3px;
+}
+span:hover{
+    color:darkgreen;
+}
+#navi .Aktuell {
+    background-color: wheat;
+    color: darkgreen;
+    font-weight: bold;  
 }
 
 .Navigation a {
     color: wheat;
     text-decoration: none;
     font-size: 13px;
-    font-weight: bold;
-    
-    
+    font-weight: bold;  
+
+}
+.Navigation a:hover {
+    color: darkgreen; 
+    font-size: 13px;
+    font-weight: bold;  
+
 }
 #navi li{
     display: inline;
@@ -16,19 +52,28 @@ body {
     padding: 5px;
     margin: 5px;
     border-radius: 25px;
+
+}
+#navi li:hover {
+background-color: wheat;
 }
 
-div{
+
+#kreis {
     background-color: wheat;
-    max-width: 30em ;
+    max-width: 800px ;
+    height: 800px;
     margin: auto;
-    height: 30em;
+    height: 800px;
     border-radius: 100%;
     
     
+    
 }
+
+    
 #MeineArbeiten {
-    max-width: 30em;
+    max-width: 800px;
     text-align: center;
     margin: auto;
     font-size: 6em;
@@ -38,7 +83,7 @@ div{
 .Titel {
     color: darkslategrey;
     text-align: center;
-    max-width: 30em;
+    max-width: 800px;
     margin: auto;
     line-height: 1.5em;
     font-size: 1.5em;
@@ -52,7 +97,7 @@ h1 {
 }
 .Media{
     display: block;
-    width: 30em;
+    width: 800px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -66,35 +111,61 @@ p{
     color: darkslategrey;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    max-width: 30em;
+    max-width: 800px;
     margin: auto;
     line-height: 2em;
 }
 
 
-.kasten {
-    color: wheat;
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-    border-radius: 25px;
-    background-color: darkgreen;
-    margin: 5px;
-    padding: 5px;
-    list-style-type: none;
+
     
-}
-.kasten a {
-    color: wheat;
-}
+
 
 table {
     display: block;
-    width: 17em;
+    width: 800px;
     margin: auto;
 }
 li{
     display: block;
-    width: 30em;
+    width: 800px;
     margin-left: auto;
     margin-right: auto;
+}
+.Kasten {
+    color: white;
+    background-color: gray;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
+    width: 250px;
+    height: 25px;
+    margin-top: 1em;
+    margin-left:0; 
+    font-size:small;
+    padding-left:5px;
+}
+
+h2{
+    color: darkgreen;
+    max-width: 800px;
+    margin: auto;
+    margin-bottom: 1em;
+    margin-top: 1em;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+}
+
+#anmerkung {
+    font-size: small;
+    text-align: start; 
+    margin-top: 1em; 
+    
+}
+div{
+    max-width: 800px ;
+    margin:auto;
+}
+#absenden{
+    width:400px;
+    height:50px;
 }
