--- a/A1.3/style.css
+++ b/A1.3/style.css
@@ -116,11 +116,6 @@ p{
     line-height: 2em;
 }
 
-
-
-    
-
-
 table {
     display: block;
     width: 800px;
@@ -143,6 +138,7 @@ li{
     margin-left:0; 
     font-size:small;
     padding-left:5px;
+    border-radius: 2px;
 }
 
 h2{
@@ -165,7 +161,11 @@ div{
     max-width: 800px ;
     margin:auto;
 }
-#absenden{
+#Nachricht{
     width:400px;
     height:50px;
+}
+
+#absenden {
+    width: 60px;
 }
