--- a/A1.3/style.css
+++ b/A1.3/style.css
@@ -30,6 +30,7 @@ span:hover{
 #navi .Aktuell {
     background-color: wheat;
     color: darkgreen;
+    font-size: 13px;
     font-weight: bold;  
 }
 
